--- a/packages.config
+++ b/packages.config
@@ -6,25 +6,31 @@
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
-  <package id="FontAwesome.Sharp" version="6.1.1" targetFramework="net472" />
+  <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
   <package id="FontAwesome.Sharp.StrongName" version="5.15.3.3" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.21.7" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.2.16" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.2.16" targetFramework="net472" />
-  <package id="K4os.Hash.xxHash" version="1.0.7" targetFramework="net472" />
-  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1537.0" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net472" />
-  <package id="Microsoft.Web.WebView2" version="1.0.1343.22" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.30" targetFramework="net472" />
-  <package id="MySqlConnector" version="2.1.13" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.26.1" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.3.8" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.3.8" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.1" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1620.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="160.1000.6" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2478.35" targetFramework="net472" />
+  <package id="MySql.Data" version="8.4.0" targetFramework="net472" />
+  <package id="MySqlConnector" version="2.3.7" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
-  <package id="protobuf-net" version="3.1.22" targetFramework="net472" />
-  <package id="protobuf-net.Core" version="3.1.22" targetFramework="net472" />
+  <package id="protobuf-net" version="3.2.30" targetFramework="net472" />
+  <package id="protobuf-net.Core" version="3.2.30" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net472" />
 </packages>
